CareerPage_logic_complete